--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
   <h1>HowManySwimmers Availability Check</h1>
   <div>
     <p>
-      HowManySwimmers is a web app that counts Salties swimmers. HowManySwimmers does face recognition. The process has
-      intense computational requirements and it would be expensive to host on the Internet, think US$100+ per month.
+      Warning: I'm not a web designer 👨‍🍳
     </p>
     <p>
-      So it's hosted on Chris Adams' laptop. But that means it might not be working right now! Eg. Chris is out of the
-      house, or his laptop is off, or his internet is down.
+      HowManySwimmers is a web app that <a href="https://cadams.com/making-howmanyswimmers/" target="_blank"
+        rel="noopener noreferrer">counts Salties swimmers using face recognition</a>. The process has
+      intense computational requirements that make it US$100+ per month to host on the Internet.
     </p>
     <p>
-      So here is a page that will check for you if it's running, and then let you visit the site. If it's not
-      running, you can still try to visit, but you might have issues.
+      So it runs on Chris Adams' laptop, whenever it's needed. Being a laptop, the app might not be running right
+      now! Eg. Chris is out of the house, his laptop is off, his internet is down...
     </p>
     <p>
-      Of course if you do have issues, you're invited to contact Chris Adams on Whatsapp.
+      So this page checks for you if it's running, and then lets you head over. If it's not running, you can still try
+      to visit 🤷‍♂️
+    </p>
+    <p>
+      For questions contact Chris Adams on Whatsapp.
     </p>
   </div>
   <div id="status">Checking if HowManySwimmers is up and running...</div>
