--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
   <h1>HowManySwimmers Availability Check</h1>
   <div>
     <p>
-      HowManySwimmers is a web app that <a href="https://cadams.com/making-howmanyswimmers/" target="_blank"
-        rel="noopener noreferrer">counts Salties swimmers using face recognition</a>. The process has
-      intense computational requirements that make it US$100+ per month to host on the Internet.
+      Welcome. 🌊🏊‍♂️🏊‍♀️
     </p>
     <p>
-      So it runs on Chris Adams' laptop (that's me!), whenever it's needed. Being a laptop, it might not be running
+      HowManySwimmers is a web app that <a href="https://cadams.com/making-howmanyswimmers/" target="_blank"
+        rel="noopener noreferrer">counts Salties swimmers using face recognition</a>. The intense computational
+      requirement makes it challenging (expensive!) to run on the Internet.
+    </p>
+    <p>
+      So it runs on Chris Adams' laptop (that's me!), just when it's needed. Being a laptop, it might not be running
       right now! Eg. the laptop is off, internet is down...
     </p>
     <p>
