Even more copy fixes

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <p>
       For questions contact Chris Adams on Whatsapp.
     </p>
+    <p>
+      Check status:
+    </p>
   </div>
   <div id="status">Checking if HowManySwimmers is up and running...</div>
   <div id="content"></div>
