Even more copy fixes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       For questions contact Chris Adams on Whatsapp.
     </p>
     <p>
-      Check status:
+      <b>Check status:</b>
     </p>
   </div>
   <div id="status">Checking if HowManySwimmers is up and running...</div>
