--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div id="content"></div>
 
   <script>
-    const targetUrl = 'https://macbookpro.myth-minor.ts.net';
+    const targetUrl = 'https://cadams-m2-mbp.myth-minor.ts.net';
 
     async function checkWebsite() {
       const statusDiv = document.getElementById('status');
